--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-echo "python-telegram-bot==20.7" > requirements.txt
-echo "python-dotenv==1.1.1" >> requirements.txt
-echo "google-generativeai==0.8.5" >> requirements.txt
+python-telegram-bot==20.7
+python-dotenv==1.1.1
+google-generativeai==0.8.5
