--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-python-telegram-bot==20.7
-python-dotenv==1.1.1
-google-generativeai==0.8.5
+python-telegram-bot==13.14
+python-dotenv
+google-generativeai
