--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,6 @@
-drwxrwxr-x  7 juhoemil juhoemil     4096 Jun 30 10:27 .
-drwxr-x--- 23 juhoemil juhoemil     4096 Jun 30 08:57 ..
--rw-rw-r--  1 juhoemil juhoemil     2246 Jun 30 09:29 bot.py
--rw-rw-r--  1 juhoemil juhoemil     2246 Jun 30 10:30 bot.py.bak
--rw-------  1 juhoemil juhoemil      117 Jun 29 17:48 .env
-drwxrwxr-x  8 juhoemil juhoemil     4096 Jun 30 10:48 .git
--rw-rw-r--  1 juhoemil juhoemil       86 Jun 30 10:02 .gitignore
--rw-rw-r--  1 juhoemil juhoemil       22 Jun 29 17:53 Procfile
--rw-rw-r--  1 juhoemil juhoemil      106 Jun 30 10:24 requirements.txt
--rw-rw-r--  1 juhoemil juhoemil       14 Jun 30 10:46 runtime.txt
-drwxrwxr-x  2 juhoemil juhoemil     4096 Jun 29 14:08 telegram-ai-bot
--rw-rw-r--  1 juhoemil juhoemil 42964072 Jun 29 17:50 telegram-ai-bot-backup.tar.gz
-drwxrwxr-x  8 juhoemil juhoemil     4096 Jun 29 15:13 tg
-drwxrwxr-x  5 juhoemil juhoemil     4096 Jun 30 10:23 .venv
-drwxrwxr-x  5 juhoemil juhoemil     4096 Jun 29 13:38 venv
+python-telegram-bot==13.14
+python-dotenv
+google-generativeai
+six>=1.15.0
+urllib3==1.26.9
+requests>=2.25.0
