Update bot.py and requirements.txt for python-telegram-bot>=20.8

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-python-telegram-bot==13.14
+python-telegram-bot>=20.8
 python-dotenv
 google-generativeai
-six>=1.15.0
-urllib3==1.26.9
-requests>=2.25.0
